--- a/topgun-react/src/components/MainPage/FlightTicketSearch.css
+++ b/topgun-react/src/components/MainPage/FlightTicketSearch.css
@@ -64,7 +64,7 @@ button:disabled {
     --bs-btn-active-bg: #78c2ad !important;  /* 버튼 배경 색상 변경 */
     --bs-btn-active-border-color: #78c2ad !important; /* 버튼 글자 색상 변경 */
 }
-/* 가는편/오는편 전체 기능에 대한 div */
+/* 가는편/오는편 전체 기능에 대한 div box*/
 .flight-all-div{
     border-radius: 1.5em;
     border: 1px solid black;
@@ -72,7 +72,7 @@ button:disabled {
     margin-bottom: 1.5em;
     width: 1100px;
 }
-/* 가는편/오는편에 대한 div */
+/* 가는편/오는편에 대한 div box*/
 .flight-select-div{
     width: 1000px;
     border: 1px solid skyblue;
