--- a/topgun-react/src/components/booking/BookingList.css
+++ b/topgun-react/src/components/booking/BookingList.css
@@ -36,4 +36,14 @@
     font-weight: bold;
     color: #4a4a4a;
   }
+/* 항공권 리스트(가격 div) */
+  .flight-price-box{
+    border-top: none !important;
+    border-bottom: none !important;
+    border-right: none !important;
+    border: 1px solid black;
+    font-size: 24px !important;
+     width: 30%;
+
+  }
   
