--- a/topgun-react/src/components/chat/Chat.css
+++ b/topgun-react/src/components/chat/Chat.css
@@ -1,5 +1,6 @@
 .chat-container {
-    max-height: 600px; /* 최대 높이 */
+    height: 500px;
+    max-height: 500px; /* 최대 높이 */
     overflow-y: auto; /* 세로 스크롤 */
     border: 1px solid #ccc; /* 테두리 */
     border-radius: 5px; /* 모서리 둥글게 */
@@ -7,6 +8,10 @@
     background-color: #f9f9f9; /* 배경색 */
     display: flex; /* 플렉스박스 활성화 */
     flex-direction: column; /* 세로 방향 정렬 */
+}
+
+.input-container {
+    margin-top: auto; /* 입력창을 아래로 고정 */
 }
 
 .chat-message {
@@ -46,4 +51,6 @@
 .message-time {
     font-size: 0.8em; /* 시간 크기 조정 */
     text-align: right; /* 오른쪽 정렬 */
+    margin-bottom : 0px;
+    margin-top : 5px;
 }
