--- a/topgun-react/src/components/booking/BookingList.css
+++ b/topgun-react/src/components/booking/BookingList.css
@@ -46,4 +46,103 @@
      width: 30%;
 
   }
+  .container{
+    /*  좌우 여백을 자동으로 설정하여 가운데 정렬 */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* 입력창 css 가져옴 */
+.list_airport {
+  min-height: 250px !important; 
+  max-height: 250px !important; 
+  overflow-y: auto; /* 도시 목록이 많아지면 스크롤 가능하게 설정 */
+}
+
+.city_group-box > li, 
+.nation-group-box > li {
+  display: flex !important;
+  justify-content: space-between !important; 
+}
+
+.lightpick__month, /*달력 사이즈*/
+.lightpick__days, /*일수 사이즈 */
+.lightpick__days-of-the-week /*주 사이즈 */ {
+  width: 450px !important;
+}
+
+/* 상단 툴바 */
+.lightpick__toolbar  {
+margin-top: 5px !important;
+}
+/* 달력의 위치 조정 */
+.lightpick--2-columns {
+  left: 21% !important;
+  top: 190px !important;
+}
+/* 하단부 버튼(Reset , Apply) */
+.lightpick__reset-action, 
+.lightpick__apply-action {
+  font-size:  14px !important;
+  padding: 0.3em !important;
+}
+/* 일자(숫자 공간) */
+.lightpick__day {
+  height: 60px !important;
+}
+/* 달력 이동 버튼(화살표) */
+.lightpick__previous-action, 
+.lightpick__next-action, 
+.lightpick__close-action {
+  width : 40px !important;
+  height:40 !important;
+  padding : 0.3em !important;
+}
+/* 월/연 */
+.lightpick__month-title > .lightpick__select,
+.lightpick__month-title > .lightpick__select-months {
+  font-size : 17px !important;
+}
+/* 좌석 */
+.select-seat{
+  width: 300px !important;
+}
+
+
+/* 비활성화된 버튼의 스타일 */
+button:disabled {
+  cursor: not-allowed !important; /* 비활성화된 버튼에 커서 스타일 */
+  pointer-events: auto !important; /* 클릭 이벤트를 무시하여 비활성화된 버튼의 클릭을 방지 */
+}
+/* 부트스트랩에 있는 색상을 지정하고 싶을때.. */
+.btn-primary {
+  --bs-btn-active-bg: #78c2ad !important;  /* 버튼 배경 색상 변경 */
+  --bs-btn-active-border-color: #78c2ad !important; /* 버튼 글자 색상 변경 */
+}
+/* 가는편/오는편 전체 기능에 대한 div box*/
+.flight-all-div{
+  border-radius: 1.5em;
+  border: 1px solid black;
+  width: 100%;
+  margin-bottom: 1.5em;
+  width: 1100px;
+}
+/* 가는편/오는편에 대한 div box*/
+.flight-select-div{
+  border: 1px solid skyblue;
+  border-radius: 0.5em;
+  margin-left: 3px;
+}
+
+
+.auto-search {
+  position: absolute; /* 리스트를 부모 요소에 상대적으로 배치 */
+  z-index: 1000; /* 다른 요소 위에 표시되도록 z-index 설정 */
+  width: 100%; /* 검색창 너비에 맞춤 */
+  background-color: white; /* 리스트 배경색 */
+  border: 1px solid #ccc; /* 리스트 테두리 */
+  max-height: 300px; /* 리스트 최대 높이 설정 (스크롤 가능하게) */
+  overflow-y: auto; /* 리스트가 길어지면 스크롤 생성 */
+}
+
   
