페이징 및 신기술 추가 @라이브러리 추가 다운@ 공지사항 최종

--- a/topgun-react/src/components/notice/noticeButton.css
+++ b/topgun-react/src/components/notice/noticeButton.css
@@ -234,3 +234,22 @@
   background-color: #ffe5b4 !important; 
   transform: scale(1.02); 
 } 
+
+.notice-pagination-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.notice-pagination {
+  display: flex;
+  justify-content: center; 
+  margin: 0 auto; /* 강제로 가운데 정렬 */
+}
+
+.notice-pagination-item {
+  margin: 0 5px; /* 아이템 사이 간격 조정 */
+}
+
+
