--- a/topgun-react/src/components/MainPage/FlightTicketSearch.css
+++ b/topgun-react/src/components/MainPage/FlightTicketSearch.css
@@ -70,7 +70,7 @@ button:disabled {
     border: 1px solid black;
     width: 100%;
     margin-bottom: 1.5em;
-    /* width: 1100px; */
+    width: 1320px !important;
 }
 /* 가는편/오는편에 대한 div box*/
 .flight-select-div{
