--- a/topgun-react/src/components/booking/BookingList.css
+++ b/topgun-react/src/components/booking/BookingList.css
@@ -41,7 +41,7 @@
     border-top: none !important;
     border-bottom: none !important;
     border-right: none !important;
-    border: 1px solid black;
+    border: 1px solid lightgray;
     font-size: 24px !important;
      width: 30%;
 
@@ -143,6 +143,131 @@ button:disabled {
   border: 1px solid #ccc; /* 리스트 테두리 */
   max-height: 300px; /* 리스트 최대 높이 설정 (스크롤 가능하게) */
   overflow-y: auto; /* 리스트가 길어지면 스크롤 생성 */
+}
+
+/* 항공권 리스트가 없으면 텍스트 출력 */
+.flight-list-empty{
+  border: 1px solid f7f7f7;
+  height: 500px !important;
+  background-color: #f7f7f7;
+  border-radius: 1em;
+}
+.list-empty-text,
+.list-empty-text-bottom{
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.list-empty-text{
+  margin-top: 180px;
+}
+
+/* 모달에 대한 css */
+.booking-time{
+  border: 1px solid black;
+  border-radius: 1em;
+  /* border-top-left-radius: 1em !important;
+  border-bottom-left-radius: 1em !important; */
+}
+
+/* 일반석 버튼 */
+
+
+/* 일반석/비지니스석 버튼(버튼 태그) */
+.seat-normal-set,
+.seat-business-set{
+  width: 100% !important;
+  border-radius: 2em !important;
+  height: 45px !important;
+  align-items: center !important;
+}
+/* 일반석/비지니스석 버튼(row 태그) */
+.seat-set-row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+/* 일반석(할인운임) */
+.seat-normal-discount{
+  text-align: center;
+  border: 1px solid black;
+  justify-content: center;
+  align-content: center;
+  border-right: none;
+}
+.seat-normal-discount:hover,
+.seat-normal:hover{
+  background-color: rgb(181, 198, 247);
+}
+/* 일반석(할인/정상운임) , 비지니스(할인/정상운임) */
+.seat-normal,
+.seat-normal-discount{
+  border:none;
+  justify-content: center;
+  align-content: center;
+}
+.seat-noraml-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+/* 일반석 가격 텍스트 */
+.seat-noraml-price{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-weight: bold;
+  font-size: 25px;
+  color: black;
+}
+/* 예약 리스트 */
+.flight-list{
+  height: 230px;
+  display: flex;
+  justify-content: center;
+}
+
+/* 비지니스석(할인운임) */
+
+/* 비지니스석(정상운임) */
+
+
+/* 여행정보 상세 내역(모달) */
+.travel-info-title{
+  background-color: #e6f9ff;
+  border-color: e6f9ff;
+  color: #00256c;
+  height: 80px;
+  font-size: 20px;
+  font-weight: bolder;
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+/* 최저가 디자인 */
+.lowest-price{
+  border-bottom-right-radius: 1em !important;
+  border-top-left-radius: 1em !important;
+  border-top-right-radius: 1em !important;
+  border: 1px solid blue;
+  width: 80px;
+  color: white;
+  background-color: blue;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 5px;
+  position: absolute;
+  text-align: center;
+  /* left: 138px; */
+  
+}
+.modal-body-set{
+  margin-bottom: 50px;
 }
 
   
