채팅방 뒷배경 색 변경, 푸터 로고 이미지 변경

--- a/topgun-react/src/components/chat/Room.css
+++ b/topgun-react/src/components/chat/Room.css
@@ -1,6 +1,6 @@
 .room-container {
     padding: 20px;
-    background-color: #f7f7f7;
+    background-color: #eee;
     height: 100vh; 
     flex: 1; /* 남은 공간을 모두 사용 */
     overflow-y: auto; /* 스크롤바 추가 */
