--- a/topgun-react/src/components/booking/BookingList.css
+++ b/topgun-react/src/components/booking/BookingList.css
@@ -77,8 +77,8 @@ margin-top: 5px !important;
 }
 /* 달력의 위치 조정 */
 .lightpick--2-columns {
-  left: 28% !important;
-  top: 155px !important;
+  left: 30% !important;
+  top: 240px !important;
 }
 /* 하단부 버튼(Reset , Apply) */
 .lightpick__reset-action, 
@@ -121,11 +121,11 @@ button:disabled {
 }
 /* 가는편/오는편 전체 기능에 대한 div box*/
 .flight-all-div{
-  border-radius: 1.5em;
+  /* border-radius: 1.5em; */
   border: 1px solid black;
   width: 100%;
   margin-bottom: 1.5em;
-  width: 1100px;
+  /* width: 1100px; */
 }
 /* 가는편/오는편에 대한 div box*/
 .flight-select-div{
@@ -133,7 +133,6 @@ button:disabled {
   border-radius: 0.5em;
   margin-left: 3px;
 }
-
 
 .auto-search {
   position: absolute; /* 리스트를 부모 요소에 상대적으로 배치 */
