항공권 조회 리스트 코드 업데이트

--- a/topgun-react/src/components/booking/Booking.css
+++ b/topgun-react/src/components/booking/Booking.css
@@ -1,5 +1,5 @@
 .booking-time{
-    border: 1px solid #d9dbe1;
+    border: 1px solid #d9dbe1 !important;
     border-radius: 1em;
     /* border-top-left-radius: 1em !important;
     border-bottom-left-radius: 1em !important; */
