--- a/topgun-react/src/components/chat/Chat.css
+++ b/topgun-react/src/components/chat/Chat.css
@@ -5,7 +5,7 @@
     border: 1px solid #ccc; /* 테두리 */
     border-radius: 5px; /* 모서리 둥글게 */
     padding: 10px; /* 패딩 */
-    background-color: #f9f9f9; /* 배경색 */
+    background-color: white; /* 배경색 */
     display: flex; /* 플렉스박스 활성화 */
     flex-direction: column; /* 세로 방향 정렬 */
 }
