푸터 협력사 수정 및 로그인에서 비밀번호 찾기 호버 색 변경

--- a/topgun-react/src/components/Login/Login.css
+++ b/topgun-react/src/components/Login/Login.css
@@ -22,3 +22,7 @@
   top: 0 !important; /* 필요에 따라 값 조정 */
   bottom: 100%; /* 인풋 필드 바로 아래에 위치하도록 */
 }
+
+.findPw:hover{
+  color: #007bff !important;
+}
